test_programs/compile_failure/noirc_frontend_tests_cannot_call_unconstrained_first_class_function_outside_of_unsafe/src/main.nr

    fn main() {
        let func = foo;
        func();
        inner(func);
    }

    fn inner(x: unconstrained fn() -> ()) {
        x();
    }

    unconstrained fn foo() {}
    